[package]
name = "mersenne_twister"
version = "1.1.1"
authors = ["David Creswick <dcrewi@gyrae.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Mersenne Twister pseudorandom number generator"
repository = "https:/github.com/artichoke/rust-mersenne-twister"
documentation = "https://artichoke.github.io/rust-mersenne-twister/mersenne_twister/"
readme = "README.md"
keywords = ["random", "rand", "rng", "algorithm", "mersenne"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[dependencies]
rand_core = "0.5"

[dev-dependencies]
quickcheck = { version = "0.9", default-features = false }
quickcheck_macros = "0.9"
